Add job Model With basic api